<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">Trang chủ</string>
    <string name="menu">Mục lục</string>
    <string name="search">Tìm kiếm</string>
    <string name="notification">Thông báo</string>
    <string name="personal">Cá nhân</string>
    <string name="not_available">Chưa hỗ trợ</string>
    <string name="home_search_hint">Bạn tìm gì hôm nay</string>
    <string name="title_home">Home</string>

    <string name="see_more">Xem thêm</string>
    <string name="flash_deal_current">Giá Sốc Hôm Nay</string>
</resources>